# doc-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MIGRATION.md  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  embed.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: deploy-en.yml  deploy.yml
benchmark/: .env.example  PLAN.md  package.json  promptfooconfig.yaml  tsconfig.json  vitest.config.ts
benchmark/agent-e2e/: README.md
benchmark/protocol/: helpers.ts  mcp-client.test.ts  response-schema.test.ts
benchmark/retrieval/: call-search.js
config/: projects.yaml
devops/: DEPLOY.md
devops/dev/: docker-compose.yml
devops/prod/: docker-compose.yml
docs/: chunk-context-enrichment.md
frontend/: index.html  package.json
frontend/src/: App.tsx
products/forguncy/: cn.yaml  product.yaml
products/gcexcel/: cn.yaml  product.yaml
products/spreadjs/: cn.yaml  en.yaml  product.yaml
products/wyn/: cn.yaml  product.yaml
scripts/: embed.py  serve.py
src/: __init__.py  embed.ts  index.ts  server.ts
src/api/: app.py  instructions.py  models.py
src/config/: env.ts  loader.ts  types.ts
src/core/: __init__.py  config.py  exceptions.py  logger.py
src/document/: __init__.py  chunker.ts  chunker_base.py  chunker_javadoc.py  chunker_markdown.py  loader.py  loader.ts  types.ts
src/embed/: package.json  tsconfig.json
src/embedding/: __init__.py  indexer.py  rate_limiter.py  searcher.py
src/mcp/: Dockerfile  (+6 more)
tutorial/: index.html  package.json
(+136 files in other folders)
